src/snapshots/bl__tests__snapshots__cmd_daemon.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Manage the browserlane daemon (background browser process)

Usage: bl daemon [OPTIONS] [COMMAND]

Commands:
  start   Start the browserlane daemon
  stop    Stop the browserlane daemon
  status  Show daemon status
  help    Print this message or the help of the given subcommand(s)

Options:
  -v, --verbose   Enable debug logging
      --headless  Hide browser window (visible by default)
      --json      Output as JSON
  -h, --help      Print help
