src/snapshots/bl__tests__snapshots__cmd_dialog.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Handle browser dialogs (alert, confirm, prompt)

Usage: bl dialog [OPTIONS] [COMMAND]

Commands:
  accept   Accept a dialog (optionally with prompt text)
  dismiss  Dismiss a dialog
  help     Print this message or the help of the given subcommand(s)

Options:
  -v, --verbose   Enable debug logging
      --headless  Hide browser window (visible by default)
      --json      Output as JSON
  -h, --help      Print help
