src/snapshots/bl__tests__snapshots__cmd_diff.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Compare current state vs previous

Usage: bl diff [OPTIONS] [COMMAND]

Commands:
  map   Compare current page elements vs last map
  help  Print this message or the help of the given subcommand(s)

Options:
  -v, --verbose   Enable debug logging
      --headless  Hide browser window (visible by default)
      --json      Output as JSON
  -h, --help      Print help
