src/snapshots/bl__tests__snapshots__cmd_download.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Manage browser downloads

Usage: bl download [OPTIONS] [COMMAND]

Commands:
  dir   Set the download directory
  help  Print this message or the help of the given subcommand(s)

Options:
  -v, --verbose   Enable debug logging
      --headless  Hide browser window (visible by default)
      --json      Output as JSON
  -h, --help      Print help
