src/snapshots/bl__tests__snapshots__cmd_expect.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Assert page state; exits 0 on pass, 1 on failure

Usage: bl expect [OPTIONS] [COMMAND]

Commands:
  url      Assert the current page URL
  title    Assert the current page title
  text     Assert the text content of the page or an element
  visible  Assert an element is visible
  hidden   Assert an element is absent or not visible
  enabled  Assert an element is enabled
  checked  Assert a checkbox or radio is checked (or unchecked with --not)
  value    Assert the value of a form element
  count    Assert the number of elements matching a selector
  js       Assert a JavaScript expression evaluates truthy
  help     Print this message or the help of the given subcommand(s)

Options:
  -v, --verbose   Enable debug logging
      --headless  Hide browser window (visible by default)
      --json      Output as JSON
  -h, --help      Print help
