src/snapshots/bl__tests__snapshots__cmd_find.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Find elements by CSS selector or semantic locator

Usage: bl find [OPTIONS] [selector]... [COMMAND]

Commands:
  text         Find element by text content
  role         Find element by ARIA role
  label        Find input by associated label text
  placeholder  Find element by placeholder attribute
  testid       Find element by data-testid attribute
  xpath        Find element by XPath expression
  alt          Find element by alt attribute
  title        Find element by title attribute
  help         Print this message or the help of the given subcommand(s)

Arguments:
  [selector]...  CSS selector (optionally preceded by a URL to navigate first)

Options:
      --all            Find all matching elements
  -v, --verbose        Enable debug logging
      --limit <limit>  Maximum number of elements to return (with --all) [default: 10]
      --headless       Hide browser window (visible by default)
      --json           Output as JSON
  -h, --help           Print help

Examples:
  bl find "a"
  # → @e1 [a] "More information..." @ (32,133) 140x18

  bl find "a" --all
  # → @e1 [a] "Home" @ (16,12) 48x24  @e2 [a] "About"  ...

  bl find text "Sign In"
  # → @e1 [button] "Sign In" @ (312,428) 96x40

  bl find role button
  # → @e1 [button] "Submit" @ (312,428) 96x40

  bl find role heading --name "Example"
  # Find heading with accessible name "Example"
