src/snapshots/bl__tests__snapshots__cmd_focus.snap
---
source: src/tests.rs
expression: render_command_help(&refs)
---
Focus an element

Usage: bl focus [OPTIONS] <selector>

Arguments:
  <selector>  CSS selector (or map ref) for the element to focus

Options:
      --headless  Hide browser window (visible by default)
  -v, --verbose   Enable debug logging
      --json      Output as JSON
  -h, --help      Print help

Examples:
  bl focus "input[name=email]"
  # Focus the email input

  bl focus @e1
  # Focus element from map
